# VisualGraphSFML

./: .gitignore  Button.cpp  Button.h  CMakeLists.txt  CircleGraph.cpp  CircleGraph.h  CircleNode.cpp  CircleNode.h  CircleNodeBox.cpp  CircleNodeBox.h  CircleNodeBoxMessages.h  FontManager.cpp  FontManager.h  Graph.cpp  Graph.h  LabelBox.cpp  LabelBox.h  Line.cpp  Line.h  MainFrame.cpp  MainFrame.h  README.md  TextBox.cpp  TextBox.h  UserInteractionBox.cpp  UserInteractionBox.h  UserInteractionMessages.h  main.cpp
